--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="2Q Project" />
+  <meta name="keywords" content="2Q Projects Web Development" />
+  <meta name="author" content="JDL Abila and DA Uy" />
+
+  <title> Exploring Harry Potter </title>
+  <link rel="icon" href="assets/Project_Logo.webp" type="image/webp" />
+  <link rel="stylesheet" href="styles.css" />
+</head>
+
+<body>
