--- a/index.html
+++ b/index.html
@@ -13,3 +13,12 @@
 </head>
 
 <body>
+    <nav>
+        <a href="../index.html">Home</a>
+        <a href="#">The Magic Begins</a>
+        <a href="#">Hogwarts Houses</a>
+        <a href="#">Characters</a>
+        <a href="#">Halls of Hogwarts</a>
+        <a href="#">Wizardry</a>
+        <a href="#">Minds Behind the Magic</a>
+</body>
