--- a/index.html
+++ b/index.html
@@ -3,22 +3,190 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="2Q Project" />
-  <meta name="keywords" content="2Q Projects Web Development" />
+  <meta name="description" content="2Q Project - Exploring Harry Potter" />
+  <meta name="keywords" content="Harry Potter, Hogwarts, Wizarding World" />
   <meta name="author" content="JDL Abila and DA Uy" />
 
-  <title> Exploring Harry Potter </title>
+  <title>Exploring Harry Potter</title>
   <link rel="icon" href="assets/Project_Logo.webp" type="image/webp" />
-  <link rel="stylesheet" href="styles.css" />
+
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600;700&family=Playfair+Display:ital@0;1&display=swap" rel="stylesheet">
+
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      min-height: 100vh;
+      background:
+        radial-gradient(circle at top, rgba(255,255,255,0.08), transparent 100%),
+        linear-gradient(rgba(0,0,0,0.65), rgba(0,0,0,0.85)),
+        url("assets/Home Page Background.jpg") no-repeat center center/cover;
+      color: #f2f2f2;
+      font-family: "Playfair Display", serif;
+      overflow-x: hidden;
+    }
+
+    body::before {
+      content: "";
+      position: fixed;
+      inset: 0;
+      background-image: radial-gradient(#ffffff88 1px, transparent 1px);
+      background-size: 120px 120px;
+      animation: floatStars 60s linear infinite;
+      pointer-events: none;
+    }
+
+    @keyframes floatStars {
+      from { background-position: 0 0; }
+      to { background-position: 1200px 1200px; }
+    }
+
+    nav {
+      display: flex;
+      justify-content: center;
+      gap: 28px;
+      padding: 22px;
+      background: rgba(0, 0, 0, 0.55);
+      backdrop-filter: blur(6px);
+      border-bottom: 1px solid rgba(212, 175, 55, 0.3);
+    }
+
+    nav a {
+      color: #f5f5f5;
+      text-decoration: none;
+      font-family: "Cinzel", serif;
+      font-size: 0.95rem;
+      letter-spacing: 1.5px;
+      position: relative;
+      transition: color 0.3s ease;
+    }
+
+    nav a::after {
+      content: "";
+      position: absolute;
+      left: 0;
+      bottom: -6px;
+      width: 0;
+      height: 2px;
+      background: #d4af37;
+      transition: width 0.3s ease;
+    }
+
+    nav a:hover {
+      color: #d4af37;
+    }
+
+    nav a:hover::after {
+      width: 100%;
+    }
+
+    .hero {
+      min-height: calc(100vh - 90px);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      padding: 40px 20px;
+    }
+
+    .hero-content {
+      max-width: 950px;
+      background: rgba(10, 10, 15, 0.7);
+      padding: 60px 50px;
+      border-radius: 16px;
+      box-shadow:
+        0 0 30px rgba(212, 175, 55, 0.15),
+        0 20px 50px rgba(0, 0, 0, 0.8);
+      animation: fadeIn 2s ease forwards;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    .hero-content h1 {
+      font-family: "Cinzel", serif;
+      font-size: 3.2rem;
+      margin-bottom: 25px;
+      color: #d4af37;
+      letter-spacing: 3px;
+      text-shadow:
+        0 0 10px rgba(212, 175, 55, 0.6),
+        0 0 25px rgba(212, 175, 55, 0.3);
+    }
+
+    .hero-content p {
+      font-size: 1.15rem;
+      line-height: 1.9;
+      margin-bottom: 22px;
+      color: #e6e6e6;
+    }
+
+    footer {
+      text-align: center;
+      padding: 16px;
+      font-size: 0.85rem;
+      background: rgba(0, 0, 0, 0.75);
+      color: #cccccc;
+      border-top: 1px solid rgba(212, 175, 55, 0.25);
+      font-family: "Cinzel", serif;
+    }
+
+    @media (max-width: 768px) {
+      .hero-content h1 {
+        font-size: 2.3rem;
+      }
+
+      .hero-content {
+        padding: 45px 25px;
+      }
+
+      nav {
+        flex-wrap: wrap;
+        gap: 16px;
+      }
+    }
+  </style>
 </head>
 
 <body>
-    <nav>
-        <a href="../index.html">Home</a>
-        <a href="#">The Magic Begins</a>
-        <a href="#">Hogwarts Houses</a>
-        <a href="#">Characters</a>
-        <a href="#">Halls of Hogwarts</a>
-        <a href="#">Wizardry</a>
-        <a href="#">Minds Behind the Magic</a>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="The Magic Begins.html">The Magic Begins</a>
+    <a href="Mysteries of the Hogwarts Houses.html">Hogwarts Houses</a>
+    <a href="Heroes of the Wizarding World.html">Characters</a>
+    <a href="Through the Halls of Hogwarts.html">Halls of Hogwarts</a>
+    <a href="The Art of Wizardry.html">Wizardry</a>
+    <a href="Meet the Minds Behind the Magic.html">Minds Behind the Magic</a>
+  </nav>
+
+  <section class="hero">
+    <div class="hero-content">
+      <h1>Welcome to the World of Harry Potter</h1>
+      <p>
+        Join us in learning about each main character, explore the wonderful school of Hogwarts,
+        learn about different spells, and more. Here you’ll discover fascinating stories behind
+        Harry, Hermione, Ron, and the many other unforgettable characters who shaped the wizarding world.
+      </p>
+      <p>
+        You’ll also get to know the four Hogwarts houses, their founders, and what makes each of them unique.
+        Dive into the enchanting lessons taught at Hogwarts, such as Defense Against the Dark Arts, and
+        unveil the mysteries behind some of the most powerful and unique spells.
+      </p>
+      <p>
+        From patronuses to dementors, this website will take you on an enchanting journey through
+        the Wizarding World of Harry Potter.
+      </p>
+    </div>
+  </section>
+
+  <footer>
+    © 2025 Exploring Harry Potter | JDL Abila & DA Uy
+  </footer>
 </body>
+</html>
