--- a/Mysteries of the Hogwarts Houses.html
+++ b/Mysteries of the Hogwarts Houses.html
@@ -238,7 +238,7 @@
     <img src="assets/Slytherin.png" alt="Slytherin" class="house slytherin">
     <img src="assets/Hufflepuff.png" alt="Hufflepuff" class="house hufflepuff">
     <img src="assets/Ravenclaw.png" alt="Ravenclaw" class="house ravenclaw">
-    <img src="assets/Sorting hat.jpg" alt="Sorting Hat" class="sorting-hat">
+    <img src="assets/Sorting Hat.png" alt="Sorting Hat" class="sorting-hat">
   </section>
 
   <footer>
