--- a/Heroes of the Wizarding World.html
+++ b/Heroes of the Wizarding World.html
@@ -8,76 +8,9 @@
 
   <title>Heroes of the Wizarding World | Exploring Harry Potter</title>
   <link rel="icon" href="assets/Project_Logo.webp" type="image/webp" />
-
+  <link rel="stylesheet" href="style5.css">
   <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700&family=Playfair+Display&display=swap" rel="stylesheet">
 
-  <style>
-    * {margin:0;padding:0;box-sizing:border-box;}
-    body {
-      font-family: 'Playfair Display', serif;
-      background: url("assets/3rd page background.png") no-repeat center/cover;
-      background-size: cover;
-      color: #eaeaea;
-      line-height: 1.8;
-      overflow-x: hidden;
-    }
-    body::before {
-      content: "";
-      position: fixed;
-      top:0; left:0;
-      width:100%; height:100%;
-      background: rgba(0,0,0,0.5);
-      z-index: 0;
-    }
-    nav {
-      display:flex;justify-content:center;gap:28px;padding:22px;
-      background: rgba(0,0,0,0.7);
-      backdrop-filter: blur(6px);
-      border-bottom:1px solid rgba(212,175,55,0.3);
-      position: sticky;top:0;z-index:10;
-    }
-    nav a {
-      font-family:'Cinzel Decorative', serif;color:#f5f5f5;
-      text-decoration:none;letter-spacing:1.5px;font-size:1rem;position:relative;
-    }
-    nav a::after {content:"";position:absolute;left:0;bottom:-6px;width:0;height:2px;background:#d4af37;transition: width 0.3s ease;}
-    nav a:hover::after {width:100%;}
-
-    .content {max-width:1100px;margin:80px auto;padding:20px;position:relative;z-index:2;text-align:center;}
-    .content h2 {
-      font-family: 'Cinzel Decorative', serif;font-size:3rem;color:#f5d76e;
-      margin-bottom:40px;letter-spacing:3px;
-      text-shadow:0 0 10px #f5d76e,0 0 20px #d4af37;
-      animation: glowTitle 4s ease-in-out infinite;
-    }
-    @keyframes glowTitle {
-      0%,100% {text-shadow:0 0 10px #f5d76e,0 0 20px #d4af37;}
-      50% {text-shadow:0 0 25px #fff8c6,0 0 50px #d4af37;}
-    }
-
-    .character-card {
-      display:flex;align-items:center;background: rgba(0,0,0,0.5);
-      backdrop-filter: blur(4px);border-radius:12px;padding:20px;margin-bottom:30px;
-      box-shadow:0 0 20px rgba(212,175,55,0.3);transition: transform 0.3s ease, box-shadow 0.3s ease;
-      text-align:left;z-index:2;
-    }
-    .character-card:hover {transform:translateY(-5px);box-shadow:0 0 35px rgba(255,240,180,0.7);}
-    .character-img {width:180px;height:180px;object-fit:cover;border-radius:10px;margin-right:20px;
-      filter:drop-shadow(0 0 15px #d4af37);transition:transform 0.3s ease, filter 0.3s ease;}
-    .character-img:hover {transform:scale(1.05);filter:drop-shadow(0 0 30px #fff8c6);}
-    .character-info h3 {font-family: 'Cinzel Decorative', serif;color:#f5d76e;margin-bottom:10px;
-      text-shadow:0 0 5px #f5d76e,0 0 10px #d4af37;}
-    .villain .character-card {border-left:4px solid #ff4d4d;}
-
-    footer {text-align:center;padding:20px;background: rgba(0,0,0,0.8);
-      border-top:1px solid rgba(212,175,55,0.25);font-family:'Cinzel Decorative', serif;font-size:0.85rem;position:relative;z-index:10;}
-
-    @media(max-width:768px){
-      .character-card{flex-direction:column;text-align:center;}
-      .character-img{margin:0 0 15px 0;}
-      .content h2{font-size:2rem;}
-    }
-  </style>
 </head>
 <body>
 
