--- a/Heroes of the Wizarding World.html
+++ b/Heroes of the Wizarding World.html
@@ -19,8 +19,8 @@
   <a href="The Magic Begins.html">The Magic Begins</a>
   <a href="Mysteries of the Hogwarts Houses.html">Hogwarts Houses</a>
   <a href="Heroes of the Wizarding World.html">Characters</a>
-  <a href="Through the Halls of Hogwarts.html">Halls of Hogwarts</a>
-  <a href="The Art of Wizardry.html">Wizardry</a>
+  <a href="#">Halls of Hogwarts</a>
+  <a href="#">Wizardry</a>
   <a href="Meet the Minds Behind the Magic.html">Minds Behind the Magic</a>
 </nav>
 
@@ -146,6 +146,10 @@
 
 <footer>
   © 2025 Exploring Harry Potter | JDL Abila & DA Uy
+  <p>Pinterest. (2025). Pinterest. Pinterest. https://www.pinterest.com</p>
+  <p>Harry Potter and the Sorcerer’s Stone: Character List. (n.d.). SparkNotes. https://www.sparknotes.com/lit/harrypotter/characters/</p>
+  <p>Harry Potter. (2000). Harry Potter Wiki. https://harrypotter.fandom.com/wiki/Harry_Potter</p>
+  <p>Harry Potter characters. (n.d.). Heroes and Villains Wiki. https://heroes-and-villain.fandom.com/wiki/Category:Harry_Potter_characters</p>
 </footer>
 
 </body>
