--- a/Meet the Minds Behind the Magic.html
+++ b/Meet the Minds Behind the Magic.html
@@ -19,8 +19,8 @@
     <a href="The Magic Begins.html">The Magic Begins</a>
     <a href="Mysteries of the Hogwarts Houses.html">Hogwarts Houses</a>
     <a href="Heroes of the Wizarding World.html">Characters</a>
-    <a href="Through the Halls of Hogwarts.html">Halls of Hogwarts</a>
-    <a href="The Art of Wizardry.html">Wizardry</a>
+    <a href="#">Halls of Hogwarts</a>
+    <a href="#">Wizardry</a>
     <a href="Meet the Minds Behind the Magic.html">Minds Behind the Magic</a>
   </nav>
 
@@ -42,6 +42,25 @@
         <p>Hi! I’m Schatz, a 14-year-old student who watched Harry Potter 3–4 years ago. I first discovered the series in grade 6 or 7 and immediately fell in love with the plot, the magical universe, and the characters’ journeys. Being a fan for years, I wanted to create a website that could help others explore this incredible world and share the magic that has inspired me for so long.</p>
       </div>
     </div>
+
+  </section>
+  <section class="content">
+    <h3>1st Page : </h3> 
+    <p>Schreiber, B. (2019). Daniel Radcliffe | Biography, Movies, & Facts. In Encyclopædia Britannica. https://www.britannica.com/biography/Daniel-Radcliffe</p>
+    <p>The Editors of Encyclopedia Britannica. (2018). J.K. Rowling | Biography, Books, & Facts. In Encyclopædia Britannica. https://www.britannica.com/biography/J-K-Rowling</p>
+    <p>Lowne, C. (2018, November 6). Harry Potter and the Philosopher’s Stone | Synopsis & Facts. Encyclopedia Britannica. https://www.britannica.com/topic/Harry-Potter-and-the-Philosophers-Stone</p>
+
+    <h3>2nd Page : </h3>
+    <p>The. (2021, April 28). What does your Hogwarts house mean? | Wizarding World. Harrypotter.com; Wizarding World Digital. https://www.harrypotter.com/features/hogwarts-house-meanings</p>
+    <p>Quick Facts about the 4 Hogwarts Houses. (2017). Hogwarts Houses. Harry Potter Wiki. https://harrypotter.fandom.com/wiki/Hogwarts_Houses</p>
+
+    <h3>3rd Page : </h3>
+    <p>Harry Potter and the Sorcerer’s Stone: Character List. (n.d.). SparkNotes. https://www.sparknotes.com/lit/harrypotter/characters/</p>
+    <p>Harry Potter. (2000). Harry Potter Wiki. https://harrypotter.fandom.com/wiki/Harry_Potter</p>
+    <p>Harry Potter characters. (n.d.). Heroes and Villains Wiki. https://heroes-and-villain.fandom.com/wiki/Category:Harry_Potter_characters</p>
+
+    <h3>For All Images : </h3>
+    <p>Pinterest. (2025). Pinterest. Pinterest. https://www.pinterest.com</p>
 
   </section>
 
