--- a/The Magic Begins.html
+++ b/The Magic Begins.html
@@ -22,8 +22,8 @@
     <a href="The Magic Begins.html">The Magic Begins</a>
     <a href="Mysteries of the Hogwarts Houses.html">Hogwarts Houses</a>
     <a href="Heroes of the Wizarding World.html">Characters</a>
-    <a href="Through the Halls of Hogwarts.html">Halls of Hogwarts</a>
-    <a href="The Art of Wizardry.html">Wizardry</a>
+    <a href="#">Halls of Hogwarts</a>
+    <a href="#">Wizardry</a>
     <a href="Meet the Minds Behind the Magic.html">Minds Behind the Magic</a>
   </nav>
 
@@ -62,6 +62,9 @@
 
   <footer>
     © 2025 Exploring Harry Potter | JDL Abila & DA Uy
+    <p>Schreiber, B. (2019). Daniel Radcliffe | Biography, Movies, & Facts. In Encyclopædia Britannica. https://www.britannica.com/biography/Daniel-Radcliffe</p>
+    <p>The Editors of Encyclopedia Britannica. (2018). J.K. Rowling | Biography, Books, & Facts. In Encyclopædia Britannica. https://www.britannica.com/biography/J-K-Rowling</p>
+    <p>Lowne, C. (2018, November 6). Harry Potter and the Philosopher’s Stone | Synopsis & Facts. Encyclopedia Britannica. https://www.britannica.com/topic/Harry-Potter-and-the-Philosophers-Stone</p>
   </footer>
 
 </body>
