--- a/Mysteries of the Hogwarts Houses.html
+++ b/Mysteries of the Hogwarts Houses.html
@@ -20,8 +20,8 @@
     <a href="The Magic Begins.html">The Magic Begins</a>
     <a href="Mysteries of the Hogwarts Houses.html">Hogwarts Houses</a>
     <a href="Heroes of the Wizarding World.html">Characters</a>
-    <a href="Through the Halls of Hogwarts.html">Halls of Hogwarts</a>
-    <a href="The Art of Wizardry.html">Wizardry</a>
+    <a href="#">Halls of Hogwarts</a>
+    <a href="#">Wizardry</a>
     <a href="Meet the Minds Behind the Magic.html">Minds Behind the Magic</a>
   </nav>
 
@@ -71,6 +71,9 @@
 
   <footer>
     © 2025 Exploring Harry Potter | JDL Abila & DA Uy
+    <p>Pinterest. (2025). Pinterest. Pinterest. https://www.pinterest.com</p>
+    <p>The. (2021, April 28). What does your Hogwarts house mean? | Wizarding World. Harrypotter.com; Wizarding World Digital. https://www.harrypotter.com/features/hogwarts-house-meanings</p>
+    <p>Quick Facts about the 4 Hogwarts Houses. (2017). Hogwarts Houses. Harry Potter Wiki. https://harrypotter.fandom.com/wiki/Hogwarts_Houses</p>
   </footer>
 
 </body>
