--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <a href="The Magic Begins.html">The Magic Begins</a>
     <a href="Mysteries of the Hogwarts Houses.html">Hogwarts Houses</a>
     <a href="Heroes of the Wizarding World.html">Characters</a>
-    <a href="Through the Halls of Hogwarts.html">Halls of Hogwarts</a>
-    <a href="The Art of Wizardry.html">Wizardry</a>
+    <a href="#">Halls of Hogwarts</a>
+    <a href="#">Wizardry</a>
     <a href="Meet the Minds Behind the Magic.html">Minds Behind the Magic</a>
   </nav>
 
@@ -47,6 +47,7 @@
 
   <footer>
     © 2025 Exploring Harry Potter | JDL Abila & DA Uy
+    <p>Pinterest. (2025). Pinterest. Pinterest. https://www.pinterest.com</p>
   </footer>
 </body>
 </html>
