--- a/Mysteries of the Hogwarts Houses.html
+++ b/Mysteries of the Hogwarts Houses.html
@@ -62,10 +62,10 @@
       <span style="top:30%; left:80%; animation-delay:3s;"></span>
     </div>
 
-    <img src="assets/gryffindor .png" alt="Gryffindor" class="house gryffindor">
-    <img src="assets/slytherin.png" alt="Slytherin" class="house slytherin">
-    <img src="assets/hufflepuff.png" alt="Hufflepuff" class="house hufflepuff">
-    <img src="assets/ravenclaw.png" alt="Ravenclaw" class="house ravenclaw">
+    <img src="assets/Gryffindor .png" alt="Gryffindor" class="house gryffindor">
+    <img src="assets/Slytherin.png" alt="Slytherin" class="house slytherin">
+    <img src="assets/Hufflepuff.png" alt="Hufflepuff" class="house hufflepuff">
+    <img src="assets/Ravenclaw.png" alt="Ravenclaw" class="house ravenclaw">
     <img src="assets/Sorting Hat.png" alt="Sorting Hat" class="sorting-hat">
   </section>
 
