--- a/Mysteries of the Hogwarts Houses.html
+++ b/Mysteries of the Hogwarts Houses.html
@@ -59,9 +59,10 @@
       <span style="top:80%; left:70%; animation-delay:4s;"></span>
       <span style="top:60%; left:50%; animation-delay:1s;"></span>
       <span style="top:30%; left:80%; animation-delay:3s;"></span>
+      <div id="house-result">The Sorting Hat is thinking...</div>
     </div>
 
-    <img src="assets/Gryffindor .png" alt="Gryffindor" class="house gryffindor">
+    <img src="assets/Gryffindor.png" alt="Gryffindor" class="house gryffindor">
     <img src="assets/Slytherin.png" alt="Slytherin" class="house slytherin">
     <img src="assets/Hufflepuff.png" alt="Hufflepuff" class="house hufflepuff">
     <img src="assets/Ravenclaw.png" alt="Ravenclaw" class="house ravenclaw">
